# dobkapapp

./: .eslintrc  .gitignore  .gitmodules  DEVELOPERS.md  LICENSE.txt  README.md  package-lock.json  package.json
.github/workflows/: build.yml
assets/images/: dk-logo.icns
dobkap/: .gitignore  .npmignore  LICENSE.txt  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
dobkap/src/: cli.ts  conf.ts  data-types.ts  dates.ts  holidays.ts  index.ts  passive-income.ts  rsd-amount.ts  tools.ts
dobkap/tests/: currency-services.test.ts  eporezi.test.ts  holidays.test.ts  ibkr-importer.test.ts  passive-income.test.ts  rsd-amount.test.ts  trivial-importer.test.ts
dobkapapp/: jest.config.js  package-lock.json  package.json  tsconfig.json
docs/: holiday-data.json
src/: application.css  application.tsx  dev-page.tsx  filing-edit-dialog.tsx  filings-page.tsx  global.d.ts  globals.d.ts  helpers.ts  importer-page.tsx  ipc-types.ts  mailbox-page.tsx  main.tsx  report-manual-import-dialog.tsx  reports-page.tsx  sync-page.tsx  taxpayer-profile-page.tsx  technical-page.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  date.rs  error.rs  exchange_rate.rs  filesystem.rs  ibkr_report_parser.rs  income_tax.rs  ipc_handlers.rs  ipc_types.rs  job_logic.rs  job_store.rs  lib.rs  main.rs  opo_data.rs  report_parser.rs  trivial_report_parser.rs
src-tauri/tests/data/: ibkr-interest1.csv  ibkr-interest2.csv
src/common/: codecs.ts  holiday-conf.ts  ipc-types.ts
(+63 files in other folders)
