[package]
name = "dobkapapp"
version = "0.7.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dobkapapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
tauri-plugin-dialog = "2"
tokio = { version = "1.47.1", features = ["time", "rt", "macros"] }
rusqlite = { version="0.37.0", features = ["bundled"] }
lazy_static = "1.5.0"
imap = "2.4.1"
rustls-connector = "0.22.0"
mail-parser = "0.11.1"
regex = "1.12.2"
chrono = "0.4.42"
rustls = "0.23.34"
reqwest = { version = "0.12.24", features = ["rustls-tls", "rustls-tls-native-roots"] }
serde-xml-rs = "0.8.1"
csv = "1.4.0"

[dev-dependencies]
tempfile = "3.23.0"
# async-imap = { version = "0.11.1" }
# async-imap = { version = "0.11.1", default-features = false, features = ["tokio", "runtime-tokio"] }

